syntax = "proto3";

package smartoffice;

//Smart Lighting proto

//Defining two methods for smart lighting
//Turning the lights on and TurnOnOffLight
//Adjusting the brightness of the lights

service SmartLighting {
    rpc TurnOnOffLights(TurnOnOffLightsRequest) returns (TurnOnOffLightsResponse);
    rpc AdjustBrightness(AdjustBrightnessRequest) returns (AdjustBrightnessResponse);
}


// Defining messages for the method

message TurnOnOffLightsRequest {
    bool isTurnedOn = 1;
}

message TurnOnOffLightsResponse {
    string status = 1;
}

message AdjustBrightnessRequest {
    int32 brightnessLevel = 1;
}

message AdjustBrightnessResponse {
    string status = 1;
}


//Smart Meeting Rooms proto

//Defining the methods for the service
service SmartMeetingRooms {
    rpc BookRoom(BookRoomRequest) returns (BookRoomResponse);
    rpc CancelBooking(CancelBookingRequest) returns (CancelBookingResponse);
}

//Defining messages for the method
message BookRoomRequest {
    string roomId = 1;
    string startTime = 2;
    string endTime = 3;
    string organizer = 4;
}

message BookRoomResponse {
    string bookingId = 1;
    string status = 2;
}

message CancelBookingRequest {
    string bookingId = 1;
}

message CancelBookingResponse {
    string status = 1;
}

//Climate Control proto

//Defning the methods for Climate Control service
service ClimateControl {
    rpc AdjustTemperature(AdjustTemperatureRequest) returns (AdjustTemperatureResponse);
    rpc AdjustHumidity(AdjustHumidityRequest) returns (AdjustHumidityResponse);
}

//Defining messages for the methods

message AdjustTemperatureRequest {
    double targetTemperature = 1;
}

message AdjustTemperatureResponse {
    string status = 1;
}

message AdjustHumidityRequest {
    int32 airflowLevel = 1;
}

message AdjustHumidityResponse {
    string status = 1;
}